--- a/WPFCoreProject/Views/LoginScreen.xaml
+++ b/WPFCoreProject/Views/LoginScreen.xaml
@@ -31,7 +31,7 @@
                 Grid.ColumnSpan="4"
                 CornerRadius="0,0,10,10">
             <Border.Background>
-                <ImageBrush Stretch="Fill" ImageSource="/Pictures/Auction_house_background_2.jpg"/>
+                <ImageBrush x:Name="loginScreenBackgroundImage" Stretch="Fill" ImageSource="/Pictures/Auction_house_background_2.jpg"/>
             </Border.Background>
         </Border>
 
@@ -137,8 +137,6 @@
                        VerticalAlignment="Top"
                        FontSize="20"
                        FontWeight="Bold"
-                       
-                       
                        >
                 
             </TextBlock>
@@ -148,11 +146,7 @@
                        FontSize="20"
                        FontWeight="Bold"
                        Margin="0,10,0,0"
-                       
-                       
-                       
                        >
-
             </TextBlock>
         </StackPanel>
 
